--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script src="https://appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
 <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.min.css">
 <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.components.min.css">
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+<script src="./main.js"></script>
 <link rel="stylesheet" href="./style.css">
-<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js">@types/office-js</script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/core-js/3.26.1/minified.min.js">@types/core-js</script>
-<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js">@types/jquery@3.3.1</script>
-<script type="text/javascript" src="./script.js"></script>
 </head>
+
 <body>
+
 <div class="container">
 <div class="wrapper">
 <div class="title"><span>電子印鑑</span></div>
@@ -32,5 +35,6 @@
 </form>
 </div>
 </div>
+
 </body>
 </html>
