--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <form action="" onsubmit="return false">
 <div class="row">
 <i class="name"></i>
-<input type="text" id="name" placeholder="例）山田、山田(太)" required>
+<input type="text" id="name" placeholder="例）山田、山田太郎" required>
 </div>
 <div class="row">
 <i class="date"></i>
@@ -35,6 +35,12 @@
 </form>
 </div>
 </div>
-
+<div>
+<span style="position:absolute;left:0;visibility:hidden;">
+<span style="position:absolute;right:0;">
+<canvas id="canvas" width="100" height="120"></canvas>
+</span>
+</span>
+</div>
 </body>
 </html>
