--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 
 <body>
-
+   <div id="contents">
+      <button id="login">Login</button>
+      <button id="exec" disabled="disabled">Execute</button>
+    </div>
 <div class="container">
 <div class="wrapper">
 <div class="title"><span>電子印鑑</span></div>
