--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="https://unpkg.com/@microsoft/office-js-helpers@0.5.0/dist/office.helpers.min.js"></script>
     <script>
       var authenticator;
-      var client_id = "アプリケーション ID(クライアント ID)";
-      var redirect_url = "リダイレクト URL";
+      var client_id = "507591d2-cfb9-4a52-bdf6-6053cfcc3ff3";
+      var redirect_url = "https://mikiyks.github.io/inkan/";
       var scope = "https://graph.microsoft.com/user.read";
       var access_token;
        
