--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             }
           });
         }
-
+         
+        $('#login').click(function(){
+          location.href = url_auth;
+        });
+         
         //API呼び出し
         $('#exec').click(function(){
           //alert(access_token); //確認用
@@ -40,7 +44,7 @@
             },
             success: function(data){
               //console.log(data); //確認用
-              alert(data.displayName);
+              alert(data.surname);
             },
             error: function(data){
               console.log(data);
@@ -53,7 +57,7 @@
   <body>
     <div id="contents">
       <button id="login">Login</button>
-      <button id="exec">Execute</button>
+      <button id="exec" disabled="disabled">Execute</button>
     </div>
   </body>
 </html>
