--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.1.1.min.js"></script>
     <script>
       var access_token;
-      var client_id = '507591d2-cfb9-4a52-bdf6-6053cfcc3ff3';
-      var scope = 'https://graph.microsoft.com/user.read';
+      var client_id = '2e1be2b2-01f2-466e-84cd-65f2b689fbce';
+      var scope = 'https://graph.microsoft.com/profile';
       var url_auth = 'https://login.microsoftonline.com/common/oauth2/v2.0/authorize' +
                      '?response_type=token' +
                      '&client_id=' + client_id +
