--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             },
             success: function(data){
               //console.log(data); //確認用
-              alert(data.surname + "!!!");
+              alert(data.surname);
             },
             error: function(data){
               console.log(data);
