--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ $(function () {
     });
   }
 
-  $(document).ready(function () {
+ Office.onReady(function () {
     location.href = url_auth;
 
     //API呼び出し
