--- a/index.html
+++ b/index.html
@@ -15,22 +15,15 @@ var url_auth = 'https://login.microsoftonline.com/common/oauth2/v2.0/authorize' 
   '&redirect_uri=' + encodeURIComponent(location.protocol + "//" + location.host + location.pathname) +
   '&scope=' + encodeURIComponent(scope);
 
-$(function () {
-  //access_tokenの取得
-  if (location.hash) {
-    var hashary = location.hash.substr(1).split('&');
-    $.each(hashary, function (i, v) {
-      var ary = v.split('=');
-      if (ary[0] == 'access_token') {
-        access_token = ary[1];
-        $('#exec').prop('disabled', false);
-        return false;
-      }
-    });
-  }
-
- Office.onReady(function () {
+window.addEventListener('load', function () {
+  if (!sessionStorage.getItem('disp_popup')) {
+    sessionStorage.setItem('disp_popup', 'on');
     location.href = url_auth;
+  } else {
+
+    $(document).ready(function () {
+      location.href = url_auth;
+    });
 
     //API呼び出し
     $('#exec').click(function () {
@@ -50,9 +43,31 @@ $(function () {
         }
       });
     });
-  });
+
+
+  }
+}, false);
+
+
+$(function () {
+  //access_tokenの取得
+  if (location.hash) {
+    var hashary = location.hash.substr(1).split('&');
+    $.each(hashary, function (i, v) {
+      var ary = v.split('=');
+      if (ary[0] == 'access_token') {
+        access_token = ary[1];
+        $('#exec').prop('disabled', false);
+        return false;
+      }
+    });
+  }
+
+
+
+
 });
-      
+
 </script>
   </head>
   <body>
