--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>v2.0 endpoint Sample</title>
+    <title>Office JavaScript API Helpers Sample</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.1.1.min.js"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <script src="https://unpkg.com/core-js/client/core.min.js"></script>
+    <script src="https://unpkg.com/@microsoft/office-js-helpers@0.5.0/dist/office.helpers.min.js"></script>
+    
     <script>
      var authenticator;
       var client_id = "2e1be2b2-01f2-466e-84cd-65f2b689fbce";
