--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Office JavaScript API Helpers Sample</title>
 
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/3.26.1/minified.js"></script>
+
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/Office.js"></script>
     <script src="https://unpkg.com/@microsoft/office-js-helpers@0.5.0/dist/office.helpers.min.js"></script>
     
     <script>
