--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <script src="https://unpkg.com/@microsoft/office-js-helpers@0.5.0/dist/office.helpers.min.js"></script>
 <script src="./main.js"></script>
 <link rel="stylesheet" href="./style.css">
-  
 </head>
 
 <body>
@@ -37,6 +36,8 @@
 </form>
 </div>
 </div>
+
+<input type="text" id="filename" style="visibility: hidden;">
 
 </body>
 </html>
