--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 </div>
 </div>
 
-<input type="text" id="filename" style="visibility: hidden;">
+<span style="position:absolute;left:0;visibility:hidden;">
+<span style="position:absolute;right:0;">
+<input type="text" id="filename">
+</span>
+</span>
 
 </body>
 </html>
