--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <span style="position:absolute;left:0;visibility:hidden;">
 <span style="position:absolute;right:0;">
-<input type="text" id="filename">
+  <div><input type="text" id="filename"></div>
 </span>
 </span>
 
