--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <div class="wrapper">
 <div class="title"><span>電子印鑑</span></div>
 <form action="" onsubmit="return false">
+  <div><img id="image"></div>
 <div class="row">
 <i class="name"></i>
 <input type="text" id="name" placeholder="例）山田、山田太郎、山田(太)" required>
